--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ body {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 
@@ -82,6 +83,7 @@ body {
   font-weight: 700;
   letter-spacing: 17.5px;
   animation: moveInRight 3s ease-out ;
+  margin-bottom: 60px;
 }
 
  @keyframes moveInLeft {
@@ -109,7 +111,6 @@ body {
 
   80% {
     transform: translateX(-20px);
-
   }
 
   100% {
@@ -120,5 +121,25 @@ body {
 
  .btn:link,
  .btn:visited {
-  
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: all .2s;
+ }
+
+ .btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+ }
+
+ .btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+ }
+
+ .btn-white {
+  background-color: #fff;
+  color: #777;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
  }
