--- a/css/style.css
+++ b/css/style.css
@@ -119,11 +119,24 @@ body {
   }
  }
 
+  @keyframes moveInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+ }
+
  .btn:link,
  .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   transition: all .2s;
+  position: relative;
  }
 
  .btn:hover {
@@ -143,3 +156,33 @@ body {
   display: inline-block;
   border-radius: 100px;
  }
+
+ .btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+ }
+
+ .btn-white::after {
+  background-color: #fff;
+ }
+
+ .btn:hover::after {
+  transform: scale(1.5);
+  opacity: 0;
+ }
+
+
+ .btn-animated {
+  animation: moveInUp .5s ease-out .75s;
+  animation-fill-mode: backwards;
+ }
+
+ 
