--- a/css/style.css
+++ b/css/style.css
@@ -9,19 +9,26 @@ Dark Green: #28b485
 
 
 
-* {
+*,
+*::after,
+*::before {
   margin: 0px;
   padding: 0px;
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 1.7;
   color:#777;
-  padding: 30px;
+  padding: 3rem;
+  box-sizing: border-box;
 }
 
 .header {
@@ -38,22 +45,22 @@ body {
   position: relative
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px;
+  top: 4rem;
+  left: 4rem;
 }
 
-.logo {
-  height: 40px;
+.header__logo {
+  height: 4rem;
 }
 
-.logo:hover {
+.header__logo:hover {
   animation: moveInRight 1s;
 }
 
 
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -69,31 +76,31 @@ body {
 }
 
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
   animation: moveInLeft 3s ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17.5px;
+  letter-spacing: 1.75rem;
   animation: moveInRight 3s ease-out ;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 }
 
  @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
   }
 
   80% {
-    transform: translateX(20px);
+    transform: translateX(1rem);
 
   }
 
@@ -106,11 +113,11 @@ body {
  @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10rem);
   }
 
   80% {
-    transform: translateX(-20px);
+    transform: translateX(-1rem);
   }
 
   100% {
@@ -122,7 +129,7 @@ body {
   @keyframes moveInUp {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(3rem);
   }
 
   100% {
@@ -135,21 +142,24 @@ body {
  .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
+  padding: 1.5rem 4rem;
+  border-radius: 10rem;
   transition: all .2s;
   position: relative;
+  font-size: 1.6rem;
  }
 
  .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+  box-shadow: 0 1rem 2rem rgba(0,0,0,0.2);
  }
 
  .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,0.2);
  }
 
- .btn-white {
+ .btn--white {
   background-color: #fff;
   color: #777;
   padding: 15px 40px;
@@ -162,7 +172,7 @@ body {
   display: inline-block;
   height: 100%;
   width: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   top: 0;
   left: 0;
@@ -170,7 +180,7 @@ body {
   transition: all .4s;
  }
 
- .btn-white::after {
+ .btn--white::after {
   background-color: #fff;
  }
 
@@ -180,7 +190,7 @@ body {
  }
 
 
- .btn-animated {
+ .btn--animated {
   animation: moveInUp .5s ease-out .75s;
   animation-fill-mode: backwards;
  }
